--- a/pages/bio.html
+++ b/pages/bio.html
@@ -46,7 +46,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
     <!-- para bloqeuar click derecho -->
     <!-- <body oncontextmenu="return false;"></body> -->
 
@@ -112,7 +112,7 @@
 
 
 
-        <section class="row arteZ">
+        <section class="row arteZ bg-light">
 
 
             <div>
@@ -159,7 +159,7 @@
             </div>
             <div class="col d-flex flex-wrap align-items-center justify-content-center">
                 <div >
-                    <div class="col"><img src="../img/zetaalphalogo2.png" width="100px" height="80%" id="logo"></div>
+                    <div class="col"><img src="../img/zetaalphalogo2.png"  width="100px" height="80%" id="logo"></div>
                 </div>
 
             </div>
