--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -60,7 +60,7 @@
                     <div id="menuhamburguesa">
                         <ul class="d-flex justify-content-center menuCenter">
                             <li>
-                                <div class="listamenu"><i class="bi bi-list fa-10x"></i>
+                                <div class="listamenu"><i class="bi bi-list instSize"></i>
                                 </div>
                                 <ul>
                                     <li><a href="../index.html">HOME</a></li>
