--- a/pages/bio.html
+++ b/pages/bio.html
@@ -112,7 +112,7 @@
     </header>
 
 
-    <main class="container-fluid px-lg-4 px-md-3 px-0">
+    <main class="container px-lg-4 px-md-3 px-0">
 
 
 
