--- a/pages/bio.html
+++ b/pages/bio.html
@@ -22,37 +22,13 @@
 
 
 
-    <!-- para bloquear el f12 -->
-    <!-- <script>
-
-        document.onkeydown = function (e) {
-            if (event.keyCode == 123) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'I'.charCodeAt(0) || e.keyCode == 'i'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'C'.charCodeAt(0) || e.keyCode == 'c'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && e.shiftKey && (e.keyCode == 'J'.charCodeAt(0) || e.keyCode == 'j'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'U'.charCodeAt(0) || e.keyCode == 'u'.charCodeAt(0))) {
-                return false;
-            }
-            if (e.ctrlKey && (e.keyCode == 'S'.charCodeAt(0) || e.keyCode == 's'.charCodeAt(0))) {
-                return false;
-            }
-        }
-    </script> -->
+   
 
 
 </head>
 
 <body class="bg-dark">
-    <!-- para bloqeuar click derecho -->
-    <!-- <body oncontextmenu="return false;"></body> -->
+
 
 
     <header>
@@ -125,19 +101,19 @@
 
                 </div>
 
-                <div class="col  flex-wrap flex-S bioZ m-5">
+                <div class="col  flex-wrap flex-S bioZ m-5" id="parrafo">
 
                     
                     <p>Nacido en La Plata, Buenos Aires, Argentina, 1990, Piscis, Número de kin: 197
                     </p>
-                    <p>Influenciado por la musica, busque desarrollarme estudiando en la Universidad de Quilmes en la carrera de Musica y Tecnologia</p>
-                    <p>Ahi descubri que podia usar programas como processing para realizar visuales y mucho mas</p>
-                    <p>Hoy hago diseños 3d y animaciones con programas como Blender, Unreal Engine, Touchdesigner, etc...</p>
-                    <p>Ultimamente desarrollando con webGL, gracias a la programacion en cables.gl</p>
-                    <p>En mis show en vivo busco implementar ambientes inmersivos, programando luces y visuales generadas en tiempo real</p>
-                    <p>Me interesa la musica por su poder de curacion a traves de las vibraciones, hoy en dia estudio el poder de los efectos visuales en estados psicologicos y cambios de animo.</p>
-                    <p>Estoy influenciado por experiencias vividas en el kaos de la vida y la muerte, observando las enseñanzas que me han traido</p>
-                    <p>Soy parte de la Consciencia Divina, amando la naturaleza, sus poderes de conexion y curacion</p>
+                    <p>Influenciado por la musica, estudie en la Universidad de Quilmes en la carrera de Musica y Tecnologia</p>
+                    <p>Aprendi a usar programas como processing para realizar visuales controlando sonidos </p>
+                    <p>Hoy hago diseños 3d y animaciones inmersivas con programas como Blender, Unreal Engine, Touchdesigner, cables.gl</p>
+                    <p>A traves de la programacion busco implementar ambientes inmersivos, con luces audioritmicas y visuales generadas en tiempo real</p>
+                    <p>La musica a traves de las vibraciones hace resonar partes de nuestro cuerpo, armonizandolo.
+                    Mis estudios abarcan el poder de los efectos visuales en estados psicologicos y cambios de animo. Mi busqueda Audiovisual se resume en llevar al maximo esos estados. </p>
+                    <p>Influenciado por experiencias vividas en el kaos de la vida y la muerte, observando las enseñanzas que me han traido</p>
+                    <p>Soy parte de la Consciencia Divina, amo la naturaleza y sus poderes de curacion</p>
                     
                 </div>
             </div>
