--- a/pages/bio.html
+++ b/pages/bio.html
@@ -44,7 +44,7 @@
                                 </div>
                                 <ul id="menuAnimation">
                                     <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
-                                    <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                                    <li style="--clr:#fc0859"><a href="arte2.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                                     <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                                     <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
                                     <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
@@ -56,7 +56,7 @@
                     <div id="menu">
                         <ul class=" flex-wrap flex-S justify-content-around menuCenter " id="menuAnimation">
                             <li style="--clr:#1535e7"><a href="../index.html" data-text="&nbsp;HOME">&nbsp;HOME&nbsp;</a></li>
-                            <li style="--clr:#fc0859"><a href="arte.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
+                            <li style="--clr:#fc0859"><a href="arte2.html" data-text="&nbsp;ARTE">&nbsp;ARTE&nbsp;</a></li>
                             <li style="--clr:#aa2aff"><a href="tienda.html" data-text="&nbsp;TIENDA">&nbsp;TIENDA&nbsp;</a></li>
                             <li style="--clr:#59c2ff"><a href="bio.html" data-text="&nbsp;BIO">&nbsp;BIO&nbsp;</a></li>
                             <li style="--clr:#B3D883"><a href="contacto.html" data-text="&nbsp;CONTACTO">&nbsp;CONTACTO&nbsp;</a></li>
@@ -130,7 +130,7 @@
             <div class="col d-flex align-items-center justify-content-center ">
                 <ul>
                     <li><a href="../index.html">HOME</a></li>
-                    <li><a href="arte.html">ARTE</a></li>
+                    <li><a href="arte2.html">ARTE</a></li>
                     <li><a href="tienda.html">TIENDA</a></li>
                 </ul>
             </div>
