--- a/pages/bio.html
+++ b/pages/bio.html
@@ -145,7 +145,7 @@
                 <ul>
                     <li><a href="bio.html">BIO</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
-                    <li><a href="https://www.instagram.com/zetaintrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
+                    <li><a href="https://www.instagram.com/zetatrip/?hl=es"><i class="bi bi-instagram"></i></a><a href="https://www.youtube.com/channel/UCxhgYlXQoZ2Hd5-Eu1xRZOQ"><i
                         class="bi bi-youtube fa-2x"></i></a>
                     </li>
                     <li></li>
